ci/templates/binary-test-cloudformation-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "EC2VPC2H8ZY": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16"
      },
    },
    "EC2S48CRX": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "EC2VPC2H8ZY"
        },
        "CidrBlock": "10.0.0.0/24"
      },
      "DependsOn": [
        "EC2VPC2H8ZY"
      ]
    },
    "EC2EIP4JZS6": {
      "Type": "AWS::EC2::EIP",
      "Properties": {},
      "DependsOn": [
        "EC2VPC2H8ZY"
      ]
    },
    "EC2EIP12N3S": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "InstanceId": {
          "Ref": "EC2I27TDS"
        }
      },
      "DependsOn": [
        "EC2VPC2H8ZY"
      ]
    },
    "EC2IG2LC11": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {},
      "DependsOn": [
        "EC2VPC2H8ZY"
      ]
    },
    "EC2RT1CA05": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EC2VPC2H8ZY"
        }
      },
      "DependsOn": [
        "EC2VPC2H8ZY",
        "EC2S48CRX",
        "EC2IG2LC11"
      ]
    },
    "EC2R4JS2J": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EC2RT1CA05"
        },
        "GatewayId": {
          "Ref": "EC2IG2LC11"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": [
        "EC2S48CRX",
        "EC2VPC2H8ZY",
        "EC2IG2LC11"
      ]
    },
    "EC2SG1BSHH": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "EC2VPC2H8ZY"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "FromPort": "0",
            "ToPort": "65535",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "GroupDescription": "allows SSH from anywhere"
      },
      "DependsOn": [
        "EC2VPC2H8ZY"
      ]
    },
    "EC2SRTA36UWE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EC2RT1CA05"
        },
        "SubnetId": {
          "Ref": "EC2S48CRX"
        }
      },
    },
    "EC2VPCGMTOU": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "EC2IG2LC11"
        },
        "VpcId": {
          "Ref": "EC2VPC2H8ZY"
        }
      },
    },
    "EC2I27TDS": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "SubnetId": {
          "Ref": "EC2S48CRX"
        },
        "ImageId": "ami-840910ee",
        "InstanceType": "m4.large",
        "KeyName": {
          "Ref": "EC2KeyPairParameter"
        },
        "SecurityGroupIds": [
          {
            "Ref": "EC2SG1BSHH"
          }
        ]
      },

    }
  },
  "Parameters": {
    "EC2KeyPairParameter": {
      "Type": "String",
      "Description": "provide EC2 keypair name"
    }
  },
  "Outputs": {
    "ElasticIPAllocationID": {
      "Description": "a handle that allows you to look up the allocated elastic IP",
      "Value": { "Fn::GetAtt" : [ "AWS::EC2::EIP", "AllocationId" ]}
    }
  }
}
